syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.section06.models";

import "google/protobuf/wrappers.proto";

message WrapperIntTest{
  //int32 data_int32 = 1;
  google.protobuf.Int32Value data_cint32 = 1;
}